Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2406,11 +2406,27 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> => "Server 2" tidak mempunyai Data Shopping Cart milik "User A" (karena data ata Shopping Cart milik "User A" disimpan di "Server 1"), Sehingga Shopping Cart nya kosong. <br/>
 >> >> Misalnya sebelumnya "User A" sudah memasukkan Produk "Apel" ke Shopping Cart, kemudian "User A" ingin menambahkan Produk "Keju" ke Shopping Cart, <br/>
 >> >> yang mana saat "User A" menambahkan Product "Keju" ke Shopping Cart, namun Prduct "Apel" tidak ada di Shopping Cart. <br/>
->> >> yang mana hal ini bisa menyebabkan "Poor User Experience" dan Frustasi bagi Customer. <br/>
->> >>
->> >>
+>> >> yang mana hal ini bisa menyebabkan "Poor User Experience" dan Frustasi bagi Customer. <br/> <br/>
 >> >>
 >> >> 
+>> >> - Dengan IP Hashing : <br/>
+>> >> Pada Case ini, Load Balancer menggunakan "IP Hashing" untuk memastikkan bahwa "Request yang berasal dari IP Address yang sama" selalu menuju Server yang sama, <br/>
+>> >> yang mana ini disebut "Session Stickiness". <br/>
+>> >> <br/>
+>> >> Step-by-Step Process dengan "IP Hashing" :  <br/>
+>> >> <1> "User A" (dari IP Address 192.168.1.5 ) mengunjungi Website untuk pertama kali : <br/>
+>> >> => Load Balancer menerapkan "IP Hashing" Algorithm ke IP Address 192.168.1.5 dan menghintung Server mana yang harus menangani Request. <br/>
+>> >> => Misalnya hasil Hash dari 192.168.1.5 selalu memetakan ke "Server 1". <br/>
+>> >> => "Server 1" menyimpan Data Shopping Cart, yang mana "User A" menambahkan Product ke Shopping Cart (Misalnya "User A" menambahkan Product "Apel" ke Shopping Cart). <br/>
+>> >>  <br/>
+>> >> <2> "User A" mengunjungi Website lagi di lain waktu ("User A" masih dengan IP Address yang sama, yaitu 192.168.1.5 ) : <br/>
+>> >>  => Load Balancer melakukan Hash pada IP 192.168.1.5  dan melakukan Request dari IP tersebut ke "Server 1" (Karena nilai Hash untuk IP selalu sama) <br/>
+>> >>  => "Server 1" sudah mempunyai Data Shopping Cart yang sebelumnya untuk "User A", Sehingga "User A" dapat melihat Product yang sebelumnya ia tambahkan ke Shopping Cart, yaitu "Apel". <br/>
+>> >>  <br/>
+>> >> <3> "User A" menambahkan lebih banyak Product ke Shopping Cart <br/>
+>> >>  => Karena Nilai Hash untuk IP Address milik "User A" selalu menunjuk ke "Server 1", maka Shopping Cart selalu utuh Saat User mengunjungi Website berkali-kali. <br/>
+>> >> <br/>
+>> >>  <br/>
 >> >> 
 >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 >> 
