Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2427,7 +2427,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>  => Karena Nilai Hash untuk IP Address milik "User A" selalu menunjuk ke "Server 1", maka Shopping Cart selalu utuh Saat User mengunjungi Website berkali-kali. <br/>
 >> >> <br/>
 >> >>  <br/>
->> >> 
+>> >>  (Note : Kekurangan dari IP Hashing adalah IP Address milik User dapat berubah jika User mengubah Network (Jaringan), misalnya dari Jaringan Wifi ke Jaringan Data Seluler)
 >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 >> 
 >> ---------
