Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2429,7 +2429,15 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>  <br/>
 >> >>  (Note : Kekurangan dari IP Hashing adalah IP Address milik User dapat berubah jika User mengubah Network (Jaringan), misalnya dari Jaringan Wifi ke Jaringan Data Seluler)
 >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+>>
+>> Even though REST APIs are stateless, they still need a way to authenticate users. This is done by passing a token (like a JWT — >> JSON Web Token) in each request, which contains all the information the server needs to know about the user. The server does not store session data but validates the token with each request to authenticate the user.`
+contoh dengan JWT : 
 >> 
+>>	 ```
+>>	GET /user/profile
+>>	Authorization: Bearer <JWT_TOKEN>
+>>	```
+>>
 >> ---------
 >>  ### {3} **REST API in GraphQL** <br/>
 >>
