Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -1,11 +1,22 @@
 # Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN
 
 ## Korelasi anatara :
-- Red Hat Enterprise Linux
+- Red Hat Enterprise Linux (RHEL)
 - Docker
 - SQL & Postgre SQL 
 - Kubernetes 
 - Hasura DDN - Version 3
 
+## Overview Korelasi nya :
+
+### 1) RHEL : menyediakan infrastruktur untuk menjalankan Docker dan Kubernetes.
+### 2) Docker : digunakan untuk mengemas PostgreSQL dan Hasura sebagai container.
+### 3) PostgreSQL : menyimpan data, dan Hasura menyediakan API untuk mengakses data tersebut.
+### 4) Kubernetes : mengelola semua container untuk memastikan skalabilitas dan ketersediaan.
+### 5) Hasura DDN v3 : mempermudah akses ke data melalui GraphQL API.
+
 -------
 --------
+# 1. Red Hat Enterprise Linux (RHEL)
+
+-> RHEL menyediakan infrastruktur untuk menjalankan Docker dan Kubernetes.
