Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -10,9 +10,22 @@
 ## Overview Korelasi nya :
 
 ### 1) RHEL : menyediakan infrastruktur untuk menjalankan Docker dan Kubernetes.
+
+
 ### 2) Docker : digunakan untuk mengemas PostgreSQL dan Hasura sebagai container.
+
+
 ### 3) PostgreSQL : menyimpan data, dan Hasura menyediakan API untuk mengakses data tersebut.
+#### A) Postgre SQL :
+
+-> PostgreSQL adalah sistem manajemen basis data relasional (Relational Database Management System atau RDBMS). <br/> <br/>
+
+-> Fungsi utamanya adalah menyimpan data dalam bentuk tabel yang terstruktur <br/><br/>
+
+
 ### 4) Kubernetes : mengelola semua container untuk memastikan skalabilitas dan ketersediaan.
+
+
 ### 5) Hasura DDN v3 : mempermudah akses ke data melalui GraphQL API.
 
 -------
