Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -19,8 +19,33 @@
 #### A) Postgre SQL :
 
 -> PostgreSQL adalah sistem manajemen basis data relasional (Relational Database Management System atau RDBMS). <br/> <br/>
-
 -> Fungsi utamanya adalah menyimpan data dalam bentuk tabel yang terstruktur <br/><br/>
+
+#### B) Hasura :
+
+-> Hasura adalah sebuah platform yang bekerja di atas PostgreSQL untuk menyediakan "API GraphQL" . <br/><br/>
+
+-> API (Application Programming Interface) adalah jembatan yang memungkinkan aplikasi lain (misalnya, aplikasi web atau mobile) untuk mengakses data dari PostgreSQL tanpa harus menulis query SQL manual. <br/><br/>
+
+-> GraphQL adalah jenis API yang mempermudah pengambilan data dengan struktur yang lebih fleksibel dibanding API tradisional seperti REST. <br/>
+yang mana, ini maksudnya adalah cara kerja GraphQL memungkinkan pengguna (Client) untuk meminta hanya data yang mereka butuhkan. <br/><br/>
+
+-> Peran Hasura : <br/>
+[-] Membaca struktur tabel di PostgreSQL. <br/>
+(Hasura membaca Data di Postgre SQL) <br/><br/>
+
+[-] Secara otomatis membuat endpoint API GraphQL untuk mengambil atau mengubah data di PostgreSQL. <br/><br/>
+ini maksudnya Hasura secara otomatis membuat endpoint GraphQL untuk operasi database tanpa perlu menulis Backend Code secara manual. Dengan API ini, Anda dapat membaca (read), menambahkan (insert), memperbarui (update), atau menghapus (delete) data di database PostgreSQL. <br/><br/>
+
+Endpoint API GraphQL adalah titik akses untuk berkomunikasi dengan database melalui query GraphQL. <br/><br/>
+
+Dalam Hasura, hanya ada satu endpoint utama (misalnya: `https://your-hasura-instance/graphql` ), yang bisa digunakan untuk semua operasi. <br/><br/>
+
+Operasi yang tersedia adalah: 
+- Query: Untuk membaca data.
+- Mutation: Untuk mengubah data (menambahkan, memperbarui, atau menghapus).
+- Subscription: Untuk mendapatkan notifikasi real-time jika ada perubahan data.
+
 
 
 ### 4) Kubernetes : mengelola semua container untuk memastikan skalabilitas dan ketersediaan.
