Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -46,6 +46,32 @@ Operasi yang tersedia adalah:
 - Mutation: Untuk mengubah data (menambahkan, memperbarui, atau menghapus).
 - Subscription: Untuk mendapatkan notifikasi real-time jika ada perubahan data.
 
+#### C) Mengapa Hasura Mempermudah Penggunaan PostgreSQL ?
+
+-> Tanpa Hasura, Anda perlu menulis query SQL secara manual untuk mengakses data PostgreSQL.  <br/>
+Contoh Query SQL Manual:  <br/><br/>
+
+(1) Query SQL Manual untuk : Mengambil pesanan pelanggan tertentu
+```
+SELECT * FROM orders WHERE user_id = 1;
+
+```
+
+dengan Hasura, kita bisa membuat Query diatas tanpa harus mengetik "Backend Code", yaitu : <br/><br/>
+
+Query GraphQL API untuk Mengambil pesanan pelanggan tertentu :
+```
+query GetUserOrders {
+  orders(where: {user_id: {_eq: 1}}) {
+    id
+    product
+    quantity
+  }
+}
+
+```
+
+
 
 
 ### 4) Kubernetes : mengelola semua container untuk memastikan skalabilitas dan ketersediaan.
