Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -71,6 +71,23 @@ query GetUserOrders {
 
 ```
 
+#### D) Cara Kerja PostgreSQL dan Hasura Bersama-sama  :
+
+(1) PostgreSQL Menyimpan Data:  <br/>
+PostgreSQL adalah tempat penyimpanan data utama. Tabel dibuat untuk menyimpan informasi yang terstruktur. <br/><br/>
+
+Contoh: Menyimpan informasi pelanggan dalam tabel `users` . <br/><br/>
+ 
+(2) Hasura Membuat API dari Data di PostgreSQL : 
+- Hasura membaca tabel `users` dari PostgreSQL.
+- Dengan Hasura, kita dapat membuat endpoint GraphQL tanpa menuliskan 'Backend Code' untuk mengambil, menambahkan, mengubah, atau menghapus data dalam tabel `users` . 
+
+(3) Aplikasi Klien Mengakses Data Melalui API Hasura: 
+- Aplikasi seperti website atau aplikasi mobile tidak berkomunikasi langsung dengan PostgreSQL.
+- Sebaliknya, Website atau Aplikasi Mobileh tersebut meminta data dari Hasura melalui API GraphQL.
+
+<br/><br/>
+
 
 
 
