Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -87,6 +87,10 @@ Contoh: Menyimpan informasi pelanggan dalam tabel `users` . <br/><br/>
 
 <br/><br/>
 
+#### E) Kesimpulan : 
+
+- PostgreSQL adalah tempat data disimpan (seperti gudang data).
+- Hasura adalah alat yang mempermudah developer untuk mengakses dan mengelola data PostgreSQL melalui API GraphQL.
 
 
 
