Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -103,4 +103,19 @@ Contoh: Menyimpan informasi pelanggan dalam tabel `users` . <br/><br/>
 --------
 # 1. Red Hat Enterprise Linux (RHEL)
 
--> RHEL menyediakan infrastruktur untuk menjalankan Docker dan Kubernetes.
+-> RHEL menyediakan infrastruktur untuk menjalankan Docker dan Kubernetes. <br/><br/>
+
+## A) Konsep :
+
+-> Red Hat Enterprise Linux :  <br/>
+adalah distribusi Linux yang dirancang untuk kebutuhan enterprise, terkenal karena stabilitas, keamanan, dan dukungan teknisnya. <br/><br/>
+
+("Dukungan Teknis" ini maksudnya layanan dan bantuan yang disediakan oleh Red Hat, perusahaan yang mengembangkan RHEL, untuk membantu organisasi dalam mengelola dan memecahkan masalah yang berkaitan dengan sistem operasi tersebut.) <br/><br/>
+
+-> RHEL sering digunakan di lingkungan produksi untuk menjalankan aplikasi seperti Docker, Kubernetes, dan database seperti PostgreSQL. <br/><br/>
+
+## B) Korelasi :
+->  RHEL adalah sistem operasi yang menjadi fondasi bagi semua layanan dan alat lainnya. <br/><br/>
+-> Docker dan Kubernetes diinstal pada RHEL untuk menjalankan dan mengelola aplikasi seperti PostgreSQL dan Hasura. <br/><br/>
+
+
