Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -119,3 +119,12 @@ adalah distribusi Linux yang dirancang untuk kebutuhan enterprise, terkenal kare
 -> Docker dan Kubernetes diinstal pada RHEL untuk menjalankan dan mengelola aplikasi seperti PostgreSQL dan Hasura. <br/><br/>
 
 
+## C) Command Linux RHEL yang berkorelasi :
+
+### 1. Mengupdate Sistem pada RHEL :
+```
+sudo yum update -y
+``` 
+
+
+
