Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -125,6 +125,7 @@ adalah distribusi Linux yang dirancang untuk kebutuhan enterprise, terkenal kare
 ```
 sudo yum update -y
 ``` 
-
+-> Command `sudo yum update -y` adalah Command yang digunakan pada Distribusi Linux yang menggunakan YUM (Yellowdog Updater, Modified) sebagai "Package Manager" nya. <br/>
+Distribusi Linux yang menggunakan YUM sebagai Package Manager-nya adalah Red Hat, CentOS, atau Fedora. <br/><br/>
 
 
