Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -128,4 +128,6 @@ sudo yum update -y
 -> Command `sudo yum update -y` adalah Command yang digunakan pada Distribusi Linux yang menggunakan YUM (Yellowdog Updater, Modified) sebagai "Package Manager" nya. <br/>
 Distribusi Linux yang menggunakan YUM sebagai Package Manager-nya adalah Red Hat, CentOS, atau Fedora. <br/><br/>
 
+#### (1) `sudo`
 
+-> `sudo adalah singkatan dari **"SuperUser DO"** . `
