Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -130,4 +130,10 @@ Distribusi Linux yang menggunakan YUM sebagai Package Manager-nya adalah Red Hat
 
 #### (1) `sudo`
 
--> `sudo adalah singkatan dari **"SuperUser DO"** . `
+-> `sudo` adalah singkatan dari **"SuperUser DO"** . <br/>
+Ini adalah perintah yang memungkinkan pengguna biasa untuk menjalankan perintah sebagai **"superuser (root)"** atau pengguna dengan hak istimewa lainnya.
+
+"Superuser (Root)" itu seperti "Admin",  <br/>
+yakni akun pengguna dengan hak akses penuh di sistem operasi Linux. <br/>
+Akun ini memiliki izin untuk melakukan hampir semua hal di sistem, seperti menginstal dan menghapus perangkat lunak, mengonfigurasi sistem, mengubah file sistem, serta mengakses dan memodifikasi data apapun di sistem. <br/>
+Root memiliki privileges (hak istimewa) yang tidak diberikan kepada pengguna biasa (user biasa) <br/>
