Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -137,3 +137,9 @@ Ini adalah perintah yang memungkinkan pengguna biasa untuk menjalankan perintah 
 yakni akun pengguna dengan hak akses penuh di sistem operasi Linux. <br/>
 Akun ini memiliki izin untuk melakukan hampir semua hal di sistem, seperti menginstal dan menghapus perangkat lunak, mengonfigurasi sistem, mengubah file sistem, serta mengakses dan memodifikasi data apapun di sistem. <br/>
 Root memiliki privileges (hak istimewa) yang tidak diberikan kepada pengguna biasa (user biasa) <br/>
+
+
+-> Beberapa perintah yang berhubungan dengan pengelolaan sistem, seperti memperbarui perangkat lunak atau menginstal paket, membutuhkan izin administrator. Dengan menggunakan `sudo` , Anda memberi izin kepada sistem untuk menjalankan perintah tersebut dengan hak akses administrator. <br/> <br/>
+
+Contoh: <br/>
+Jika Kita mencoba menginstal atau menghapus perangkat lunak tanpa menggunakan `sudo` , Kita akan mendapatkan pesan kesalahan karena Kita tidak memiliki izin yang diperlukan.
