Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -142,4 +142,7 @@ Root memiliki privileges (hak istimewa) yang tidak diberikan kepada pengguna bia
 -> Beberapa perintah yang berhubungan dengan pengelolaan sistem, seperti memperbarui perangkat lunak atau menginstal paket, membutuhkan izin administrator. Dengan menggunakan `sudo` , Anda memberi izin kepada sistem untuk menjalankan perintah tersebut dengan hak akses administrator. <br/> <br/>
 
 Contoh: <br/>
-Jika Kita mencoba menginstal atau menghapus perangkat lunak tanpa menggunakan `sudo` , Kita akan mendapatkan pesan kesalahan karena Kita tidak memiliki izin yang diperlukan.
+Jika Kita mencoba menginstal atau menghapus perangkat lunak tanpa menggunakan `sudo` , Kita akan mendapatkan pesan kesalahan karena Kita tidak memiliki izin yang diperlukan. <br/><br/>
+
+
+#### (2) `yum`
