Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -118,6 +118,11 @@ adalah distribusi Linux yang dirancang untuk kebutuhan enterprise, terkenal kare
 ->  RHEL adalah sistem operasi yang menjadi fondasi bagi semua layanan dan alat lainnya. <br/><br/>
 -> Docker dan Kubernetes diinstal pada RHEL untuk menjalankan dan mengelola aplikasi seperti PostgreSQL dan Hasura. <br/><br/>
 
+------
+------
+# Command & Query yang berkorelasi 
+
+## 1. Red Hat Enterprise Linux (RHEL) :
 
 ## C) Command Linux RHEL yang berkorelasi :
 
