Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -121,8 +121,8 @@ adalah distribusi Linux yang dirancang untuk kebutuhan enterprise, terkenal kare
 ------
 ------
 # Command & Query yang berkorelasi 
-
-## 1. Red Hat Enterprise Linux (RHEL) :
+----
+# 1. Red Hat Enterprise Linux (RHEL) :
 
 ## C) Command Linux RHEL yang berkorelasi :
 
