Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -118,6 +118,19 @@ adalah distribusi Linux yang dirancang untuk kebutuhan enterprise, terkenal kare
 ->  RHEL adalah sistem operasi yang menjadi fondasi bagi semua layanan dan alat lainnya. <br/><br/>
 -> Docker dan Kubernetes diinstal pada RHEL untuk menjalankan dan mengelola aplikasi seperti PostgreSQL dan Hasura. <br/><br/>
 
+
+# 2. Docker 
+-> Docker digunakan untuk menjalankan PostgreSQL dan Hasura di dalam Container
+
+## A. Concept :
+- Docker memungkinkan aplikasi berjalan di dalam container—lingkungan yang ringan dan terisolasi yang membawa semua dependensi aplikasi.
+  
+- PostgreSQL dan Hasura sering dikemas dalam container Docker untuk memudahkan deployment dan skalabilitas.
+
+
+
+
+
 ------
 ------
 # Command & Query yang berkorelasi 
