Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -119,14 +119,34 @@ adalah distribusi Linux yang dirancang untuk kebutuhan enterprise, terkenal kare
 -> Docker dan Kubernetes diinstal pada RHEL untuk menjalankan dan mengelola aplikasi seperti PostgreSQL dan Hasura. <br/><br/>
 
 
-# 2. Docker 
--> Docker digunakan untuk menjalankan PostgreSQL dan Hasura di dalam Container
+# 2. Docker  
+-> Docker digunakan untuk menjalankan PostgreSQL dan Hasura di dalam Container <br/>
 
-## A. Concept :
+## A) Concept :
 - Docker memungkinkan aplikasi berjalan di dalam container—lingkungan yang ringan dan terisolasi yang membawa semua dependensi aplikasi.
   
 - PostgreSQL dan Hasura sering dikemas dalam container Docker untuk memudahkan deployment dan skalabilitas.
 
+## B) Korelasi : 
+-> Docker berjalan di atas RHEL (Red Hat Enterprise Linux). <br/>
+yang mana, ini artinya Docker dijalankan pada sistem operasi Red Hat Enterprise Linux (RHEL). <br/><br/>
+
+Docker membutuhkan kernel Linux untuk berfungsi, dan RHEL menyediakan kernel yang diperlukan untuk Docker berfungsi dengan baik. <br/><br/>
+
+Docker bergantung pada fitur tertentu yang disediakan oleh kernel Linux untuk isolasi, kontainerisasi, dan manajemen sumber daya.  <br/><br/>
+Beberapa fitur utama yang dibutuhkan oleh Docker adalah: <br/>
+[-] Namespaces: <br/>
+Fitur ini memungkinkan Docker untuk mengisolasi berbagai aplikasi yang berjalan dalam container. Setiap container memiliki "namespace" sendiri untuk sumber daya seperti proses, jaringan, dan sistem file. <br/><br/>
+
+[-] Cgroups (Control Groups): <br/>
+Fitur ini digunakan untuk mengelola sumber daya sistem yang digunakan oleh container, seperti CPU, memori, dan I/O. Docker menggunakan cgroups untuk membatasi penggunaan sumber daya oleh container. <br/><br/>
+
+[-] Union Filesystems : <br/>
+ Docker menggunakan sistem file seperti OverlayFS untuk membuat layer-layer yang efisien dalam container, di mana setiap container berbagi basis sistem file yang sama dan hanya menyimpan perbedaan (modifikasi) dalam layer tambahan. <br/><br/>
+
+
+
+-> Docker digunakan untuk menjalankan PostgreSQL dan Hasura, mengisolasi keduanya dari sistem utama.
 
 
 
