Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -146,9 +146,10 @@ Fitur ini digunakan untuk mengelola sumber daya sistem yang digunakan oleh conta
 
 
 
--> Docker digunakan untuk menjalankan PostgreSQL dan Hasura, mengisolasi keduanya dari sistem utama.
-
-
+-> Docker digunakan untuk menjalankan PostgreSQL dan Hasura, mengisolasi keduanya dari sistem utama. <br/>
+ yang mana, ini artinya, Docker digunakan untuk menjalankan PostgreSQL dan Hasura di dalam container terpisah, yang terisolasi dari sistem operasi utama (host system) <br/><br/><br/>
+ 
+<.....lanjutkan......>
 
 
 ------
