Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -147,9 +147,14 @@ Fitur ini digunakan untuk mengelola sumber daya sistem yang digunakan oleh conta
 
 
 -> Docker digunakan untuk menjalankan PostgreSQL dan Hasura, mengisolasi keduanya dari sistem utama. <br/>
- yang mana, ini artinya, Docker digunakan untuk menjalankan PostgreSQL dan Hasura di dalam container terpisah, yang terisolasi dari sistem operasi utama (host system) <br/><br/><br/>
+ yang mana, ini artinya, Docker digunakan untuk menjalankan PostgreSQL dan Hasura di dalam container terpisah, yang terisolasi dari sistem operasi utama (host system) <br/><br/>
  
-<.....lanjutkan......>
+Isolasi berarti bahwa aplikasi yang dijalankan dalam container akan beroperasi secara terpisah dari sistem operasi utama (host) dan aplikasi lainnya yang berjalan di luar container. <br/>
+Meskipun aplikasi-aplikasi ini berjalan pada host yang sama, mereka memiliki ruang lingkungan (environment) mereka sendiri di dalam Container, yang berarti mereka tidak saling memengaruhi atau mengganggu satu sama lain.  <br/>
+
+
+
+
 
 
 ------
