Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -150,9 +150,21 @@ Fitur ini digunakan untuk mengelola sumber daya sistem yang digunakan oleh conta
  yang mana, ini artinya, Docker digunakan untuk menjalankan PostgreSQL dan Hasura di dalam container terpisah, yang terisolasi dari sistem operasi utama (host system) <br/><br/>
  
 Isolasi berarti bahwa aplikasi yang dijalankan dalam container akan beroperasi secara terpisah dari sistem operasi utama (host) dan aplikasi lainnya yang berjalan di luar container. <br/>
-Meskipun aplikasi-aplikasi ini berjalan pada host yang sama, mereka memiliki ruang lingkungan (environment) mereka sendiri di dalam Container, yang berarti mereka tidak saling memengaruhi atau mengganggu satu sama lain.  <br/>
+Meskipun aplikasi-aplikasi ini berjalan pada host yang sama, mereka memiliki ruang lingkungan (environment) mereka sendiri di dalam Container, yang berarti mereka tidak saling memengaruhi atau mengganggu satu sama lain.  <br/> <br/><br/>
 
+**Keuntungan Isolasi dengan Docker :**
+[1] Menghindari Konflik Konfigurasi : <br/>
+Setiap container memiliki lingkungan yang terisolasi dan terpisah dari sistem operasi host, sehingga konfigurasi atau dependensi yang dibutuhkan oleh PostgreSQL atau Hasura tidak akan bentrok dengan aplikasi atau sistem lain yang berjalan pada mesin yang sama. <br/><br/>
 
+[2] Portabilitas Aplikasi : <br/>
+Karena PostgreSQL dan Hasura dikemas dalam container, Anda bisa dengan mudah memindahkannya ke server lain atau menjalankannya di lingkungan yang berbeda (seperti di cloud) tanpa perlu mengkhawatirkan perbedaan sistem atau konfigurasi host. <br/><br/>
+
+[3] Kemudahan Manajemen dan Pengembangan : <br/>
+Dengan menggunakan Docker, Anda bisa menjalankan dan mengelola PostgreSQL dan Hasura dalam container yang terpisah. Hal ini membuatnya lebih mudah untuk memperbarui atau mengonfigurasi aplikasi tanpa memengaruhi sistem utama. <br/><br/>
+
+[4] Isolasi Sumber Daya : <br/>
+Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, memori, dan jaringan untuk masing-masing container. Misalnya, Anda dapat membatasi berapa banyak memori yang bisa digunakan oleh container PostgreSQL agar tidak mengganggu kinerja container Hasura atau aplikasi lain di host.
+<br/><br/>
 
 
 
@@ -187,6 +199,10 @@ Root memiliki privileges (hak istimewa) yang tidak diberikan kepada pengguna bia
 
 Contoh: <br/>
 Jika Kita mencoba menginstal atau menghapus perangkat lunak tanpa menggunakan `sudo` , Kita akan mendapatkan pesan kesalahan karena Kita tidak memiliki izin yang diperlukan. <br/><br/>
+
+
+
+
 
 
 #### (2) `yum`
