Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -152,7 +152,7 @@ Fitur ini digunakan untuk mengelola sumber daya sistem yang digunakan oleh conta
 Isolasi berarti bahwa aplikasi yang dijalankan dalam container akan beroperasi secara terpisah dari sistem operasi utama (host) dan aplikasi lainnya yang berjalan di luar container. <br/>
 Meskipun aplikasi-aplikasi ini berjalan pada host yang sama, mereka memiliki ruang lingkungan (environment) mereka sendiri di dalam Container, yang berarti mereka tidak saling memengaruhi atau mengganggu satu sama lain.  <br/> <br/><br/>
 
-**Keuntungan Isolasi dengan Docker :**
+-> **Keuntungan Isolasi dengan Docker :**   <br/>
 [1] Menghindari Konflik Konfigurasi : <br/>
 Setiap container memiliki lingkungan yang terisolasi dan terpisah dari sistem operasi host, sehingga konfigurasi atau dependensi yang dibutuhkan oleh PostgreSQL atau Hasura tidak akan bentrok dengan aplikasi atau sistem lain yang berjalan pada mesin yang sama. <br/><br/>
 
