Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -169,6 +169,20 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 
 # 3. SQL & Postgre SQL
 
+## A) Konsep :
+- SQL adalah bahasa yang digunakan untuk mengelola data dalam database.
+  
+- PostgreSQL adalah database relasional berbasis SQL yang mendukung fitur canggih seperti JSON dan replikasi.
+
+## B) Korelasi :
+- PostgreSQL adalah tempat penyimpanan data utama.
+
+- Hasura terhubung ke PostgreSQL untuk menyediakan API GraphQL.
+
+
+# 3. Kubernetes
+
+
 ------
 ------
 # Command & Query yang berkorelasi 
