Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -180,7 +180,16 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 - Hasura terhubung ke PostgreSQL untuk menyediakan API GraphQL.
 
 
-# 3. Kubernetes
+# 4. Kubernetes
+## A) Konsep :
+-> Kubernetes adalah sistem orkestrasi untuk mengelola container. Ini mengatur proses seperti penjadwalan, load balancing, dan penskalaan otomatis (automatic Scale-Up) . <br/> <br/>
+
+-> Kubernetes adalah platform orkestrasi open-source yang digunakan untuk mengelola, menjalankan, dan mengatur banyak container dalam suatu lingkungan yang terdistribusi (misalnya, di server atau di cloud). Container adalah unit aplikasi yang terisolasi yang berisi semua yang diperlukan untuk menjalankan aplikasi. <br/><br/>
+
+-> Kubernetes tidak hanya menjalankan satu container, tetapi memungkinkan untuk mengelola banyak container di berbagai mesin atau server dalam suatu kluster.  <br/> <br/>
+
+
+
 
 
 ------
