Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -123,6 +123,8 @@ adalah distribusi Linux yang dirancang untuk kebutuhan enterprise, terkenal kare
 -> Docker digunakan untuk menjalankan PostgreSQL dan Hasura di dalam Container <br/>
 
 ## A) Concept :
+- Docker bertugas untuk membuat Container
+
 - Docker memungkinkan aplikasi berjalan di dalam container—lingkungan yang ringan dan terisolasi yang membawa semua dependensi aplikasi.
   
 - PostgreSQL dan Hasura sering dikemas dalam container Docker untuk memudahkan deployment dan skalabilitas.
