Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -184,13 +184,44 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 
 # 4. Kubernetes
 ## A) Konsep :
+-> Container dibuat oleh Docker, tetapi Container tersebut di-orkestrasikan (dikelola) oleh Kubernetes. <br/> <br/>
+
 -> Kubernetes adalah sistem orkestrasi untuk mengelola container. Ini mengatur proses seperti penjadwalan, load balancing, dan penskalaan otomatis (automatic Scale-Up) . <br/> <br/>
 
 -> Kubernetes adalah platform orkestrasi open-source yang digunakan untuk mengelola, menjalankan, dan mengatur banyak container dalam suatu lingkungan yang terdistribusi (misalnya, di server atau di cloud). Container adalah unit aplikasi yang terisolasi yang berisi semua yang diperlukan untuk menjalankan aplikasi. <br/><br/>
 
 -> Kubernetes tidak hanya menjalankan satu container, tetapi memungkinkan untuk mengelola banyak container di berbagai mesin atau server dalam suatu kluster.  <br/> <br/>
 
+-> Orkestrasi dalam konteks ini berarti proses mengatur dan mengelola seluruh siklus hidup container secara otomatis. Orkestrasi mencakup berbagai aspek, mulai dari Deployment aplikasi, pemantauan, penjadwalan, penskalaan otomatis, hingga pemulihan ketika terjadi kesalahan. <br/><br/>
 
+-> Fungsi-fungsi yang Dikelola oleh Kubernetes : <br/>
+[1] Penjadwalan (Scheduling) :
+- Penjadwalan berarti memutuskan di server mana (atau node dalam kluster Kubernetes) container-container harus dijalankan.
+- Kubernetes melakukan hal ini dengan menentukan pada mesin mana container akan berjalan berdasarkan ketersediaan sumber daya (seperti CPU dan memori), beban, dan kebutuhan lainnya.
+- Kubernetes menggunakan scheduler untuk secara otomatis memilih node yang tepat dan menempatkan container di sana agar sistem berfungsi secara efisien.
+- Contoh: Jika Anda memiliki beberapa container untuk aplikasi web dan beberapa Container untuk database, Kubernetes akan menempatkan aplikasi web & database pada Node sesuai dengan kebutuhannya.
+  Contoh : <br/>
+  => Container yang kita miliki adalah : <br/>
+  <1> Container untuk Aplilkasi Web : <br/>
+  Aplikasi Web butuh untuk "Menangani banyak Permintaan Pengguna", tetapi "tidak butuh untuk menyimpan Data".  <br/>
+  Dari hal ini, kita dapat ketahui bahwa Container untuk Aplikasi Web membutuhkan banyak CPU & RAM karena perlu "Menangani banyak Permintaan Pengguna".  <br/>
+  Dan juga, dapat kita ketahui bahwa Container untuk Aplikasi Web tidak membutuhkan banyak "Kapasitas Penyimpanan" karena  Aplikasi Web "tidak butuh untuk menyimpan Data". <br/> <br/>
+
+  <2> Container untuk Database : <br/>
+  Database hanya perlu untuk "Menyimpan Data". <br/>
+  Sehingga dapat kita ketahui bahwa Container untuk Database membutuhkan banyak "Kapasitas Penyimpanan". <br/>
+  Dan juga,  dapat kita ketahui bahwa Container untuk Database tidak membutuhkan banyak CPU & RAM. <br/><br/>
+
+  => Node yang kita miliki adalah : <br/>
+  <1> Node 1 : <br/>
+  memiliki banyak CPU & RAM, tetapi meiliki lebih sedikit "Kapasitas Penyimpanan". <br/><br/>
+
+  <2> Node 2 : <br/>
+  memiliki banyak "Kapasitas Penyimpanan", tetapi memiliki lebih sedikit CPU & RAM. <br/><br/>
+
+  => Maka penempatan Container pada Node tersebut adalah : <br/>
+  [-] Container untuk "Aplikasi Web" ditempatkan pada "Node 1" <br/>
+  [-] Container untuk "Database" ditempatkan pada "Node 2"  <br/>
 
 
 
