Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -221,7 +221,18 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 
   => Maka penempatan Container pada Node tersebut adalah : <br/>
   [-] Container untuk "Aplikasi Web" ditempatkan pada "Node 1" <br/>
-  [-] Container untuk "Database" ditempatkan pada "Node 2"  <br/>
+  [-] Container untuk "Database" ditempatkan pada "Node 2"  <br/> <br/>
+
+
+[2] Load Balancing :  <br/>
+- Load balancing adalah teknik untuk mendistribusikan traffick secara merata ke berbagai container atau pods (unit dasar di Kubernetes yang dapat berisi satu atau lebih container).  <br/>
+
+>> ^For your Information^  <br/>
+>>  Hierarki pada Kubernetes :
+>> - Satu Cluster terdiri dari beberapa Namespace.
+>> - Satu Namespace terdiri dari beberapa Pod.
+>> - Satu Pod terdiri dari beberapa Container.
+
 
 
 
