Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -232,7 +232,8 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 >> - Satu Cluster terdiri dari beberapa Namespace.
 >> - Satu Namespace terdiri dari beberapa Pod.
 >> - Satu Pod terdiri dari beberapa Container.
-
+>> <br/><br/>
+>> Cluster -> Namespace -> Pod -> Container 
 
 
 
